--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,9 @@ body { background: var(--smoky-black); }
   #REUSED STYLE
 \*-----------------------------------*/
 
-article {
+.sidebar, 
+article,
+.hero-section {
   background: var(--eerie-black-2);
   border: 1px solid var(--jet);
   border-radius: 20px;
@@ -237,7 +239,7 @@ article.active {
 .h4,
 .h5 {
   color: var(--white-2);
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
 }
 
 .h2 { font-size: var(--fs-1); }
@@ -866,7 +868,7 @@ text-transform: none; /* Remove any text-transform that might be causing capital
   color: var(--light-gray);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   width: 100%;
   padding: 8px 10px;
   border-radius: 8px;
@@ -958,7 +960,7 @@ text-transform: none; /* Remove any text-transform that might be causing capital
   color: var(--white-2);
   font-size: var(--fs-5);
   font-weight: var(--fw-400);
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   line-height: 1.3;
 }
 
@@ -1132,7 +1134,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   padding: 13px 20px;
   border-radius: 14px;
   font-size: var(--fs-6);
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   box-shadow: var(--shadow-3);
   z-index: 1;
   transition: var(--transition-1);
@@ -1171,7 +1173,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   #HERO SECTION
 \*-----------------------------------*/
 
-.hero-section, article {
+.hero-section {
   position: relative;
   background: var(--eerie-black-2);
   border: 1px solid var(--jet);
@@ -1180,8 +1182,6 @@ textarea.form-input::-webkit-resizer { display: none; }
   margin-bottom: 30px;
   box-shadow: var(--shadow-1);
   z-index: 1;
-  max-width: 1200; /* Match the main container's max-width */
-  margin-inline: auto; /* Center the hero section */
 }
 
 .hero-container {
@@ -1313,7 +1313,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 @media (min-width: 768px) {
     /* max-width for the hero section */
     .hero-section {
-        max-width: 1200; /* Adjust the max-width for larger screens */
+        max-width: 1200px; /* Adjust the max-width for larger screens */
         margin-inline: auto; /* Center the hero section */
       }
   .hero-contacts {
@@ -1667,7 +1667,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * REUSED STYLE
    */
 
-  article { width: 1200; }
+  article { width: 900px; }
 
   .has-scrollbar::-webkit-scrollbar-button { width: 100px; }
 
