--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,7 +487,7 @@ main {
 
 .service-icon-box img { margin: auto; }
 
-.service-content-box { text-align: center; }
+/* .service-content-box { text-align: center; } */
 
 .service-item-title { margin-bottom: 7px; color: var(--vegas-gold);text-transform: none; /* Remove any automatic text transformation */}
 
